--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
         android:text="@string/hello_world"
         app:layout_box="all" />
 
+    <ImageView
+        android:id="@+id/imageView_compass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@android:drawable/arrow_up_float" />
+
     <TextView
         android:id="@+id/clock"
         android:layout_width="wrap_content"
